# restaurant-lookup

restaurant_lookup/: .gitignore  README.md  benchmark.py  composite.py  data_loader.py  decorator.py  distance_calculator.py  factory.py  filter_strategy.py  interfaces.py  observer.py  pyproject.toml  requirements.txt  restaurant_lookup.py  result_writer.py  run.py  run_benchmark.py  setup.py  spatial_index.py  time_checker.py
restaurant_lookup/data/: user_locations.csv
restaurant_lookup/tests/: test_design_patterns.py  test_integration.py  test_spatial_index.py
