[tool.poetry]
name = "restaurant-lookup"
version = "0.1.0"
description = "A tool that finds restaurants available for delivery based on user locations"
authors = ["Shivendra Dubey dshivendra88@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.20.0"
pyproj = "^3.0.0"
rtree = "^1.0.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
tabulate = "^0.8.0"
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-benchmark = "^3.4.0"
freezegun = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
